# GAMES101-Assignments

./: .gitignore  README.md
a0/: README.md
a0/src/: example.cpp  main.cpp
a1/: README.md
a1/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
a2/: README.md
a2/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
a3/: README.md
a3/src/: Texture.hpp  main.cpp  rasterizer.cpp
a4/: README.md
a4/src/: main.cpp
a5/: README.md
a5/src/: Renderer.cpp  Triangle.hpp
a6/: README.md
a6/src/: BVH.cpp  Bounds3.hpp  Triangle.hpp  main.cpp
a7/: README.md
a7/src/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
a8/: CMakeLists.txt  README.md
a8/src/: application.h  main.cpp  mass.h  rope.cpp  rope.h  spring.h
a8/src/CGL/include/CGL/: osdtext.h
pa1/src/: main.cpp
